--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 header {
   background-color: #0b1531;
@@ -24,25 +25,63 @@ nav a {
   font-weight: bold;
 }
 nav ul li {
-  display: inline;
   margin-right: 10px;
+  font-size: small;
 }
 main {
   width: 100%;
   height: 100vh;
   padding-block: 20px;
 }
-.hero div{
-  position: absolute;
-  color: #ff1212;
+.hero {
+  position: relative;
   width: 100%;
-  height: 60vh;
-  
+  height: 60vh; 
+  min-height: 250px;
+  max-height: 200vh;
 }
-.banner {
-  z-index: -1;
-  width: 100%;
-  height: inherit;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.315);
 
+.hero-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: #fefefe;
+}
+
+.banner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.315);
+}
+.sobre_min {
+  padding: 30px;
+  border: #0b1531 solid 2px;
+  margin: 20px;
+  margin-right: 0%;
+}
+
+.sobre_min:hover {
+  padding: 31px;
+  margin: 21px;
+  margin-right: 0%;
+}
+
+.curiosidades {
+  margin-block: 80px;
+  padding: 30px;
+  width: 40%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.196);
+}
+.curiosidades:hover {
+  margin-block: 81px;
+  padding: 31px;
+  width: 41%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.196);
+}
+.curiosidades ul {
+  list-style: none;
+  padding: 15px;
 }
