--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ nav ul li {
   margin-right: 10px;
   font-size: small;
 }
+nav ul li:hover {
+  background-color: #ffffff3a;
+  transform: scale(1.1);
+}
+
 main {
   width: 100%;
   height: 100vh;
@@ -58,15 +63,16 @@ main {
 }
 .sobre_min {
   padding: 30px;
-  border: #0b1531 solid 2px;
+  border: #0b153127 solid 2px;
   margin: 20px;
-  margin-right: 0%;
+  margin-right: 0;
 }
 
 .sobre_min:hover {
   padding: 31px;
   margin: 21px;
-  margin-right: 0%;
+  margin-right: 0;
+
 }
 
 .curiosidades {
@@ -84,4 +90,30 @@ main {
 .curiosidades ul {
   list-style: none;
   padding: 15px;
+}
+.curiosidades li {
+  padding: 5px;
+  font-size: 1.2em;
+}
+.causos {
+  font-style: italic;
+  margin-left: 5%;
+  background: #fffbe7;
+  border-left: 6px solid #fe5e0d;
+  border-radius: 8px;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+  padding: 32px 28px;
+  color: #333;
+  position: relative;
+}
+
+.causos::before {
+  content: "“";
+  font-size: 3em;
+  color: #fe5e0d;
+  position: absolute;
+  left: 16px;
+  top: 8px;
+  opacity: 0.2;
+  pointer-events: none;
 }
